--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>CORONA</title>
 </head>
 <body>
-    <h1>CACACA</h1>
     <div id="main-play-area">
         <img class="player-shooter" src="./img/hero.png" alt="hero">
         <h4 class="game-instructions">
-            Não deixe o corona vírus chegar perto!
+            Extermine o Corona!
         </h4>
         <div class="start-button">
             <h1>START</h1>
